Add native Cranelift benchmark to JMH factorial test
Three-way comparison: interpreter vs JVM-compiled vs Cranelift-native.
Results show native is within 9% of JVM compiled for compute-heavy work
(input=1000) but 24x slower for trivial calls (input=5) due to Panama
invokeWithArguments overhead.

Update plan with hybrid Machine architecture: JVM compiler for call
dispatch + Cranelift for function bodies.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>